fixed some more broken css

--- a/css/style.css
+++ b/css/style.css
@@ -3618,10 +3618,6 @@ a.callbacks_nav.callbacks1_nav.prev {
   overflow: hidden;
 }
 
-.project-title{
-  min-height: 400px;
-}
-
 .project-desc-container {
   width: 100%;
   height: 100%;
